# yiddish-training-data

./: LICENSE  README.md  config.toml  final_english_headlines.txt  final_yiddish_headlines.txt  pyproject.toml
data/: cache_english_headlines.txt  cache_yiddish_headlines.txt  english_headlines.txt  final_yiddish_headlines.txt  yiddish_headlines.txt
data/other-texts/: catskills-english.txt  catskills-yiddish.txt  yiddish-in-the-bedroom.txt
other-texts/: english-in-the-bedroom.txt
src/: find-articles.py  parse-articles.py  parse_articles.py  script.ipynb
src/wiktionary/: parser.py  test_parser.py
